# aiida-adsorption-wf

./: .gitignore  README.md  check_and_convert_filenames.py  eqeq_raspa_screening.py  pyproject.toml  requirements.txt  setup.py
config/: code_raspa_run_slurm.yml  computer_slurm.yml
examples/subset-coremof/cif_converted/: 1499489_acs_cgd_6b01265_1499490_clean_openbabel.cif  ACOCOM_clean_openbabel.cif  ACOCUS_clean_openbabel.cif  ACODAZ_clean_openbabel.cif  AFEKAX_clean_openbabel.cif  AKIXEZ_clean_openbabel.cif  APEBOO_clean_openbabel.cif  ASEXED_clean_openbabel.cif  AVEMOE_clean_openbabel.cif  AWEJES_clean_openbabel.cif  BAFVAH_clean_openbabel.cif  BAPVEW_clean_openbabel.cif  BIBYAO_clean_openbabel.cif  BICDAU_clean_openbabel.cif  BUBDIL_clean_openbabel.cif  BUCTUQ_clean_openbabel.cif  BUFPIC_clean_openbabel.cif  BUKMUQ_clean_openbabel.cif  BUPDOH_clean_openbabel.cif  CAWBUY_clean_openbabel.cif  CEKNIQ_clean_openbabel.cif  CEMKOV_clean_openbabel.cif  CIDLAE_clean_openbabel.cif  CILFIN_clean_openbabel.cif  CISMAT01_clean_openbabel.cif  COYMIN_clean_openbabel.cif  CUNXIS_clean_openbabel.cif  CUSXIY_clean_openbabel.cif  CUSXOE_clean_openbabel.cif  CUVTIX_clean_openbabel.cif  DACSAE_clean_openbabel.cif  DAFXUG_clean_openbabel.cif  DAMRAN_clean_openbabel.cif  (+108 more)
scripts/: calcjob2path.py  plot_cpu_time.py  print_cpus_used.sh
src/EQeq_raspa_aiida/: analyze_worflow.py  calcjob2path.py
src/aiida_adsorption_wf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/aiida_raspa_EQeq/: analyze_worflow.py
src/workflows/: eqeq_raspa_screening.py
(+3 files in other folders)
